src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>AccountCreatedDateTime__c</fullName>
        <formula>Account.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountCreatedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Add_Years_to_Date__c</fullName>
        <formula>IF(
    AND(
       MONTH(Date__c) = 2,
       DAY(Date__c) = 29,
       NOT(
           OR(
              MOD(YEAR(Date__c), 400) = 0,
              AND (
                   MOD(YEAR(Date__c), 4) = 0,
                   MOD(YEAR(Date__c), 100) != 0
              )
           )
       )
    ),
    DATE(YEAR(Date__c) + Number_of_Years__c, 3, 1),
    DATE(
         YEAR(Date__c) + Number_of_Years__c,
         MONTH(Date__c), 
         DAY(Date__c)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add Years to Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Days_From_Date__c</fullName>
        <formula>(5 * (FLOOR((TODAY() - DATE(1900, 1, 8)) / 7)) + MIN(5, MOD(TODAY() - DATE(1900, 1, 8), 7)))
-
(5 * (FLOOR((Date__c - DATE(1900, 1, 8)) / 7)) + MIN(5, MOD(Date__c - DATE(1900, 1, 8), 7)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Days From Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Age_in_Days__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age in Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <formula>IF(
   (NOT(IsClosed)) &amp;&amp; (Case_Age_in_Days__c &gt; 20), 
   &quot;RED&quot;,
   IF(
      (NOT(IsClosed)) &amp;&amp; (Case_Age_in_Days__c &gt; 10),
      &quot;YELLOW&quot;,
      &quot;GREEN&quot;
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Creation__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Date__c</fullName>
        <formula>TODAY() + 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Future Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Date_Month__c</fullName>
        <formula>IF(
   MONTH(Date__c) = 12,
   DATE(YEAR(Date__c), 12, 31),
   DATE(
        YEAR(Date__c), 
        MONTH(Date__c) + 1, 
        1
   ) - 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day of Date Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Day_of_Month__c</fullName>
        <formula>IF( 
    MONTH( DATEVALUE(NOW()) ) = 12,
    DATE( 
         YEAR( DATEVALUE(NOW()) ), 12, 31 
         ),
    DATE( 
         YEAR( DATEVALUE(NOW()) ), 
         MONTH( DATEVALUE(NOW()) ) + 1, 
         1
    ) - 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day of Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>March_17_2015_1700__c</fullName>
        <formula>DATETIMEVALUE(&quot;2015-03-17 17:00:00&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>March_17_2015_1700</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>March_17_2015__c</fullName>
        <formula>DATE(2015,03,17)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>March_17_2015</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Years__c</fullName>
        <label>Number of Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_Based_on_Type__c</fullName>
        <formula>CASE(Type,
    &quot;Electrical&quot;, 1,
    &quot;Electronic&quot;, 2,
    &quot;Mechanical&quot;, 3,
    &quot;Structural&quot;, 4,
    &quot;Other&quot;, 5,
    5
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Based on Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Escalating__c</fullName>
        <label>Reason for Escalating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Sentence__c</fullName>
        <formula>&quot;This case is &quot; &amp; TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Sentence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Three_Business_Days_From_Today__c</fullName>
        <formula>CASE(
   MOD(TODAY() - DATE(1900, 1, 7), 7),
   3, TODAY() + 5,
   4, TODAY() + 5,
   5, TODAY() + 5,
   6, TODAY() + 4,
   TODAY() + 3
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Three Business Days From Today</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Type_Back_to_Blank</fullName>
        <active>true</active>
        <description>Cannot change type back to blank</description>
        <errorConditionFormula>NOT(ISPICKVAL(PRIORVALUE(Type), &quot;&quot;)) 
&amp;&amp; ISPICKVAL(Type,&quot;&quot;)</errorConditionFormula>
        <errorMessage>Cannot change type back to blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Escalation_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
   ISPICKVAL(Status, &quot;Escalated&quot;),
   ISBLANK(Reason_for_Escalating__c)
)</errorConditionFormula>
        <errorMessage>Please enter a reason for changing the case status to Escalated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mark_as_Escalated</fullName>
        <active>true</active>
        <description>You can only set a case as escalated if it is high priority and not closed&apos; under the Escalated field when triggered.</description>
        <errorConditionFormula>IsEscalated
&amp;&amp; OR(
   TEXT(Priority) != &quot;High&quot;,
   TEXT(Status) = &quot;Closed&quot;
)</errorConditionFormula>
        <errorDisplayField>IsEscalated</errorDisplayField>
        <errorMessage>You can only set a case as escalated if it is high priority and not closed&apos; under the Escalated field when triggered.</errorMessage>
    </validationRules>
</CustomObject>